# openv_4.3_cmake_error

./: CMakeLists.txt  README.md
info_files/: CMake-flags.make-opencv4.2.txt  CMake-flags.make-opencv4.3.txt  build_output_opencv4.2.txt  build_output_opencv4.3.txt  cmake_opencv4.2_output.txt  cmake_opencv4.3_output.txt
src/: main.cpp  middle.cpp  middle.h  saxpy.cu  saxpy.cuh
